tests/error/test_division_by_zero.fg
# Error test: division by zero should be a runtime error
# Expected: runtime error about division by zero

proc main() -> void:
    var x: int = 10
    var y: int = 0
    var z: int = x / y
    print(z)

